properties file updated

--- a/Configuration/OR.properties
+++ b/Configuration/OR.properties
@@ -1,8 +1,17 @@
+#Login page
 loginUrl = https://prescadmin.aritsltd.com/#/login
 logEmail = //*[@id="root"]/div/div/div/div/div/div[1]/div/form/div[1]/input
 logPass = //*[@id="root"]/div/div/div/div/div/div[1]/div/form/div[2]/input
 logBtn = //*[@id="root"]/div/div/div/div/div/div[1]/div/form/div[3]/div[1]/button
 
+#Medical Center
+mcBtn = //*[@id=\"root\"]/div/div[1]/ul/li[1]/a
+mctBtn = //*[@id=\"root\"]/div/div[1]/ul/li[1]/ul/li[1]/a
+cmctBtn = //*[@id=\"root\"]/div/div[2]/div/main/div/div/header/a
+cmctName = //*[@id=\"name\"]
+cmctSubmit = //*[@id=\"root\"]/div/div[2]/div/main/div/div/div/div/div/form/footer/button[1]
+cmctSuccessAlert = //*[@id=\"swal2-html-container\"]
+cmctSuccessAlertOk = /html/body/div[2]/div/div[6]/button[1]
 
 dpath = E:\\Automation\\copied\\READ2.xlsx
 btn_Xpath=//*[@id=\"root\"]/div/div[1]/ul/li[1]/a
