--- a/Configuration/OR.properties
+++ b/Configuration/OR.properties
@@ -13,6 +13,69 @@ cmctSubmit = //*[@id=\"root\"]/div/div[2]/div/main/div/div/div/div/div/form/foot
 cmctSuccessAlert = //*[@id=\"swal2-html-container\"]
 cmctSuccessAlertOk = /html/body/div[2]/div/div[6]/button[1]
 
+#Doctor Management >> Doctor Types
+dmBtn = //*[@id="root"]/div/div[1]/ul/li[2]/a
+dtBtn = //*[@id="root"]/div/div[1]/ul/li[2]/ul/li[1]/a
+cdtBtn = //*[@id="root"]/div/div[2]/div/main/div/div/header/a
+cdtName = //*[@id="description"]
+cdtSubmit = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/footer/button[1]
+cmctSuccessAlert = //*[@id="swal2-html-container"]
+cmctSuccessAlertOk = /html/body/div[2]/div/div[6]/button[1]
+
+
+#Doctor Management >> Specializations
+specializationsBtn = //*[@id="root"]/div/div[1]/ul/li[2]/ul/li[2]/a
+cspBtn = //*[@id="root"]/div/div[2]/div/main/div/div/header/a
+cspName = //*[@id="name"]
+cspSname = //*[@id="short_name"]
+cspSubmit = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/footer/button[1]
+cspSuccessAlert = //*[@id="swal2-html-container"]
+cspSuccessAlertOk = /html/body/div[2]/div/div[6]/button[1]
+
+#Doctor Management >> Doctors
+doctorsBtn = //*[@id="root"]/div/div[1]/ul/li[2]/ul/li[3]/a
+cdocBtn = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/header/a
+cdocFname = //*[@id="first_name"]
+cdocLname = //*[@id="last_name"]
+cdocGender = 
+cdocDob = //*[@id="date_of_birth"]
+cdocPhone = //*[@id="phone"]
+cdocEmail = //*[@id="email"] 
+cdocPass = //*[@id="password"]
+cdocBmdc = //*[@id="bmdc_number"]
+cdocDt = 
+cdocDegree = //*[@id="degree"]
+cdocEdui = //*[@id="educational_institution"]
+cdocAddress = //*[@id="address"]
+cdocIw = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/div[14]/div/div/input[1]
+cdocSubmit = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/footer/button[1] 
+
+#Generic Management >> Advice
+ gmBtn= //*[@id="root"]/div/div[1]/ul/li[3]/a
+ adviceBtn = //*[@id="root"]/div/div[1]/ul/li[3]/ul/li[1]/a
+ caBtn = //*[@id="root"]/div/div[2]/div/main/div/div/header/a
+ caName = //*[@id="name"]
+ caSubmit = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/footer/button[1]
+ 
+ #Diagnosis
+ diagnosisBtn = //*[@id="root"]/div/div[1]/ul/li[3]/ul/li[2]/a
+ cdBtn = //*[@id="root"]/div/div[2]/div/main/div/div/header/a
+ cdName = //*[@id="name"]
+ cdSubmit = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/footer/button[1]
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
 dpath = E:\\Automation\\copied\\READ2.xlsx
 btn_Xpath=//*[@id=\"root\"]/div/div[1]/ul/li[1]/a
 Password_Xpath=.//input[@type='password']
