--- a/Configuration/OR.properties
+++ b/Configuration/OR.properties
@@ -1,3 +1,6 @@
+# Excel path
+Coppied = E:\\Automation\\copied\\TEST DATA.xlsx
+
 #Login page
 loginUrl = https://prescadmin.aritsltd.com/#/login
 logEmail = //*[@id="root"]/div/div/div/div/div/div[1]/div/form/div[1]/input
@@ -10,8 +13,8 @@ mctBtn = //*[@id=\"root\"]/div/div[1]/ul/li[1]/ul/li[1]/a
 cmctBtn = //*[@id=\"root\"]/div/div[2]/div/main/div/div/header/a
 cmctName = //*[@id=\"name\"]
 cmctSubmit = //*[@id=\"root\"]/div/div[2]/div/main/div/div/div/div/div/form/footer/button[1]
-cmctSuccessAlert = //*[@id=\"swal2-html-container\"]
-cmctSuccessAlertOk = /html/body/div[2]/div/div[6]/button[1]
+#cmctSuccessAlert = //*[@id=\"swal2-html-container\"]
+#cmctSuccessAlertOk = /html/body/div[2]/div/div[6]/button[1]
 
 #Doctor Management >> Doctor Types
 dmBtn = //*[@id="root"]/div/div[1]/ul/li[2]/a
@@ -51,24 +54,51 @@ cdocIw = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/div[14]/di
 cdocSubmit = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/footer/button[1] 
 
 #Generic Management >> Advice
- gmBtn= //*[@id="root"]/div/div[1]/ul/li[3]/a
- adviceBtn = //*[@id="root"]/div/div[1]/ul/li[3]/ul/li[1]/a
- caBtn = //*[@id="root"]/div/div[2]/div/main/div/div/header/a
- caName = //*[@id="name"]
- caSubmit = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/footer/button[1]
+gmBtn= //*[@id="root"]/div/div[1]/ul/li[3]/a
+adviceBtn = //*[@id="root"]/div/div[1]/ul/li[3]/ul/li[1]/a
+
+createBtn = //*[@id="root"]/div/div[2]/div/main/div/div/header/a
+Name = //*[@id="name"]
+Submit = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/footer/button[1]
+SuccessAlert = //*[@id="swal2-html-container"]
+SuccessAlertOk = /html/body/div[2]/div/div[6]/button[1]
  
- #Diagnosis
- diagnosisBtn = //*[@id="root"]/div/div[1]/ul/li[3]/ul/li[2]/a
- cdBtn = //*[@id="root"]/div/div[2]/div/main/div/div/header/a
- cdName = //*[@id="name"]
- cdSubmit = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/footer/button[1]
+#Diagnosis
+diagnosisBtn = //*[@id="root"]/div/div[1]/ul/li[3]/ul/li[2]/a
+
+cdBtn = //*[@id="root"]/div/div[2]/div/main/div/div/header/a
+cdName = //*[@id="name"]
+cdSubmit = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/footer/button[1]
  
+#Followup
+followupsBtn = //*[@id="root"]/div/div[1]/ul/li[3]/ul/li[3]/a
+
+#Observation
+observationBtn = //*[@id="root"]/div/div[1]/ul/li[3]/ul/li[4]/a
+
+#Medicine
+medicineBtn = //*[@id="root"]/div/div[1]/ul/li[3]/ul/li[5]/a
+
+#Symptom
+symptomBtn = //*[@id="root"]/div/div[1]/ul/li[3]/ul/li[6]/a
+
+#Investigations
+investigationsBtn = //*[@id="root"]/div/div[1]/ul/li[3]/ul/li[7]/a
+
+##Primary Types
+ptBtn = //*[@id="root"]/div/div[1]/ul/li[3]/ul/li[7]/ul/li[1]/a
+
+##Types
+
+typesBtn = //*[@id="root"]/div/div[1]/ul/li[3]/ul/li[7]/ul/li[2]/a
+selectpt = 
 
 
-
-
-
-
+###Common items
+createBtn = //*[@id="root"]/div/div[2]/div/main/div/div/header/a
+Submit = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/footer/button[1]
+SuccessAlert = //*[@id="swal2-html-container"]
+SuccessAlertOk = /html/body/div[2]/div/div[6]/button[1]
 
 
 
