--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,9 @@
 <dependency>
     <groupId>io.github.bonigarcia</groupId>
     <artifactId>webdrivermanager</artifactId>
-    <version>4.2.2</version>
+    <version>5.0.3</version>
 </dependency>
+
 
 
 <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
@@ -54,6 +55,13 @@
     <groupId>org.apache.poi</groupId>
     <artifactId>poi-ooxml</artifactId>
     <version>5.0.0</version>
+</dependency>
+
+
+<dependency>
+  <groupId>org.apache.poi</groupId>
+  <artifactId>poi-ooxml</artifactId>
+  <version>3.16-beta1</version>
 </dependency>
 
 
