--- a/Configuration/OR.properties
+++ b/Configuration/OR.properties
@@ -1,6 +1,10 @@
 # Excel path
 Coppied = E:\\Automation\\copied\\TEST DATA.xlsx
 
+# Menu Bar
+menubar = //*[@id="root"]/div/div[1]
+
+
 #Login page
 loginUrl = https://prescadmin.aritsltd.com/#/login
 logEmail = //*[@id="root"]/div/div/div/div/div/div[1]/div/form/div[1]/input
@@ -91,8 +95,8 @@ ptBtn = //*[@id="root"]/div/div[1]/ul/li[3]/ul/li[7]/ul/li[1]/a
 ##Types
 
 typesBtn = //*[@id="root"]/div/div[1]/ul/li[3]/ul/li[7]/ul/li[2]/a
-selectpt = 
-
+cTypebtn = //*[@id="root"]/div/div[2]/div/main/div/div/header/a
+dropdown = //*[@id="primary_types"]
 
 ###Common items
 createBtn = //*[@id="root"]/div/div[2]/div/main/div/div/header/a
