Create func except Doctor & Medicine

--- a/Configuration/OR.properties
+++ b/Configuration/OR.properties
@@ -11,6 +11,12 @@ logEmail = //*[@id="root"]/div/div/div/div/div/div[1]/div/form/div[1]/input
 logPass = //*[@id="root"]/div/div/div/div/div/div[1]/div/form/div[2]/input
 logBtn = //*[@id="root"]/div/div/div/div/div/div[1]/div/form/div[3]/div[1]/button
 
+#Logout
+rLogo = //*[@id="root"]/div/div[2]/header/ul[2]/li[4]/a/div/img
+logout = //*[@id="root"]/div/div[2]/header/ul[2]/li[4]/div/a
+remediLogo = //*[@id="root"]/div/div[1]/a/img[1]
+loginErr = //*[@id="root"]/div/div/div/div/div/div[1]/div/form/div[3]/div[1]/small
+
 #Medical Center
 mcBtn = //*[@id=\"root\"]/div/div[1]/ul/li[1]/a
 mctBtn = //*[@id=\"root\"]/div/div[1]/ul/li[1]/ul/li[1]/a
@@ -44,18 +50,18 @@ doctorsBtn = //*[@id="root"]/div/div[1]/ul/li[2]/ul/li[3]/a
 cdocBtn = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/header/a
 cdocFname = //*[@id="first_name"]
 cdocLname = //*[@id="last_name"]
-cdocGender = 
+cdocGender = //*[@id="gender"]
 cdocDob = //*[@id="date_of_birth"]
 cdocPhone = //*[@id="phone"]
 cdocEmail = //*[@id="email"] 
 cdocPass = //*[@id="password"]
 cdocBmdc = //*[@id="bmdc_number"]
-cdocDt = 
+cdocDt = //*[@id="doctor_type"]
 cdocDegree = //*[@id="degree"]
 cdocEdui = //*[@id="educational_institution"]
 cdocAddress = //*[@id="address"]
 cdocIw = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/div[14]/div/div/input[1]
-cdocSubmit = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/footer/button[1] 
+cdocSubmit = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/footer/button[1]
 
 #Generic Management >> Advice
 gmBtn= //*[@id="root"]/div/div[1]/ul/li[3]/a
@@ -103,11 +109,6 @@ createBtn = //*[@id="root"]/div/div[2]/div/main/div/div/header/a
 Submit = //*[@id="root"]/div/div[2]/div/main/div/div/div/div/div/form/footer/button[1]
 SuccessAlert = //*[@id="swal2-html-container"]
 SuccessAlertOk = /html/body/div[2]/div/div[6]/button[1]
-
-
-
-
-
 
 
 dpath = E:\\Automation\\copied\\READ2.xlsx
