--- a/test-output/old/Suite/Test5.properties
+++ b/test-output/old/Suite/Test5.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Test2][SuiteResult context=Test4][SuiteResult context=Test5]
+[SuiteResult context=Test2][SuiteResult context=Test4][SuiteResult context=Test5][SuiteResult context=Test7][SuiteResult context=Test8][SuiteResult context=Test9][SuiteResult context=Test11][SuiteResult context=Test12][SuiteResult context=Test13]
